[package]
name = "kafka-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-channel = "1.8.0"
clap = { version = "4.1.1", features = ["derive"] }
futures = "0.3.25"
hdrhistogram = "7.5.2"
rdkafka = { version = "0.29.0", features = ["ssl"] }
tokio = { version = "1.24.2", features = ["sync", "macros"] }
tokio-scoped = "0.2.0"
